overflow fixed

--- a/style/base.css
+++ b/style/base.css
@@ -66,6 +66,7 @@ body {
   body{
     padding: 0;
     margin: 0;
+    overflow: scroll;
   }
 
   html{
